--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ welcome = Hello World!
 
 spring.datasource.url= jdbc:mysql://mysql:3306/sampledb
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=WHbQPe3gSietbBSK
 spring.jpa.hibernate.ddl-auto=create-drop
